Fix text selection.

--- a/client/index.sass
+++ b/client/index.sass
@@ -29,9 +29,14 @@ html
   min-height: 100%
   user-select: none
 
+::selection
+  color: white
+  background: rgb(144, 144, 144)
+
 .field input
   width: 100%
   -ms-user-select: text
+  user-select: text
 
 h1
   position: fixed
