--- a/client/index.sass
+++ b/client/index.sass
@@ -223,7 +223,7 @@ label
     border-color: rgba(0, 0, 68, 0.73) rgba(0, 0, 68, 0.53) rgba(0, 0, 68, 0.66) rgba(0, 0, 68, 0.53)
     transform: rotate(0.4deg)
 
-  &:hover
+  &:not(:disabled):hover
     color: rgba(0, 0, 68, 0.8)
     border-color: rgba(0, 0, 68, 0.8) rgba(0, 0, 68, 0.66) rgba(0, 0, 68, 0.6) rgba(0, 0, 68, 0.66)
     transform: scale(1.01)
@@ -240,3 +240,12 @@ label
       border-color: rgba(0, 0, 68, 0.86) rgb(0, 0, 68) rgba(0, 0, 68, 0.66) rgba(0, 0, 68, 0.86)
     &::after
       border-color: rgb(0, 0, 68) rgba(0, 0, 68, 0.8) rgba(0, 0, 68, 0.93) rgba(0, 0, 68, 0.8)
+
+  &:disabled
+    cursor: not-allowed
+    color: rgba(0, 0, 68, 0.3)
+    border-color: rgba(0, 0, 68, 0.1) rgba(0, 0, 68, 0.16) rgba(0, 0, 68, 0.08) rgba(0, 0, 68, 0.11)
+    &::before
+      border-color: rgba(0, 0, 68, 0.12) rgba(0, 0, 68, 0.095) rgba(0, 0, 68, 0.06) rgba(0, 0, 68, 0.14)
+    &::after
+      border-color: rgba(0, 0, 0, 0.11) rgba(0, 0, 68, 0.11) rgba(0, 0, 68, 0.12) rgba(0, 0, 68, 0.12)
