--- a/client/index.sass
+++ b/client/index.sass
@@ -232,7 +232,7 @@ label
     &::after
       border-color: rgba(0, 0, 68, 0.86) rgba(0, 0, 68, 0.66) rgba(0, 0, 68, 0.8) rgba(0, 0, 68, 0.66)
 
-  &:active
+  &:not(:disabled):active
     color: rgb(0, 0, 68)
     border-color: rgba(0, 0, 68, 0.93) rgba(0, 0, 68, 0.8) rgba(0, 0, 68, 0.73) rgba(0, 0, 68, 0.8)
     transform: scale(0.99)
