--- a/client/index.sass
+++ b/client/index.sass
@@ -174,6 +174,14 @@ label
     background: rgba(0, 0, 68, 0.6)
     transform: rotate(-0.6deg)
 
+.invalid.field label
+  color: rgba(120, 0, 0, 0.60)
+  border-bottom-color: rgba(120, 0, 0, 0.53)
+  &::before
+    background: rgba(120, 0, 0, 0.73)
+  &::after
+    background: rgba(120, 0, 68, 0.6)
+
 .field
   margin-bottom: 0.75cm
 
