--- a/client/index.sass
+++ b/client/index.sass
@@ -18,245 +18,169 @@
   -moz-appearance: none
   -webkit-appearance: none
   -ms-user-select: none
+  line-height: inherit
 
 html
   color: rgb(34, 34, 34)
   font-family: "Hi Melody", cursive
-  font-size: 0.6cm
+  font-size: 0.75cm
+  line-height: 0.75cm
   white-space: pre
-  background: linear-gradient(to bottom, rgb(221, 221, 255), rgb(255, 255, 221))
-  min-width: 100%
-  min-height: 100%
   user-select: none
+  background: linear-gradient(to bottom, rgb(221, 221, 255), rgb(255, 255, 221))
+  background-attachment: fixed
 
 ::selection
   color: white
   background: rgb(144, 144, 144)
 
-.field input
-  width: 100%
+input
   -ms-user-select: text
   user-select: text
 
 @function ink($opacity)
   @return rgba(0, 0, 68, $opacity)
 
-@mixin tape
-  background: rgba(170, 170, 170, 0.53)
-  box-shadow: 0 0.1cm 0.15cm rgba(0, 0, 0.13, 0.2)
+@function invalid-ink($opacity)
+  @return rgba(120, 0, 0, $opacity)
 
-@mixin lined-paper
+@mixin ruled
+  background: linear-gradient(to bottom, transparent 0cm, rgb(221, 221, 255) 0.02cm, transparent 0.04cm) 0 0.125cm repeat
+  background-size: auto 0.75cm
+
+@mixin card
   box-shadow: 0 0.125cm 0.375cm ink(0.2)
   border-radius: 0.125cm
-  background: linear-gradient(to bottom, transparent 0cm, rgb(221, 221, 255) 0.02cm, transparent 0.04cm) 0.25cm 0.375cm repeat, linear-gradient(to bottom, rgb(255, 255, 238), rgb(238, 238, 255))
-  background-size: 0.75cm 0.75cm, auto
-  box-shadow: 0 0.125cm 0.375cm ink(0.2)
-
-@mixin lined-paper-with-content
-  line-height: 0.75cm
-  padding: 1.125cm 0.375cm 1cm 0.375cm
-  @include lined-paper
 
 body > h1
   position: fixed
-  top: 0.5cm
+  padding: 0 0.75cm
+  top: 1cm
+  height: 1.25cm
   left: 50%
-  padding: 0.375cm 1cm 0.125cm 1cm
   transform: translateX(-50%)
+  line-height: 1.5cm
   font-size: 0.8cm
-  overflow: visible
-  @include lined-paper
+  z-index: 1
+  background: linear-gradient(to bottom, transparent 0.15cm, rgb(221, 221, 255) 0.17cm, transparent 0.19cm, transparent 0.9cm, rgb(221, 221, 255) 0.92cm, transparent 0.94cm), linear-gradient(to bottom, rgb(255, 255, 238), rgb(245, 245, 245))
+  @include card
 
-  &::before
-    content: ""
-    position: absolute
-    left: 0
-    top: 50%
-    height: 2cm
-    width: 1cm
-    transform: translate(-50%, -50%) rotate(10deg)
-    @include tape
-
-  &::after
-    content: ""
-    position: absolute
-    right: 0
-    top: 50%
-    height: 2cm
-    width: 1cm
-    transform: translate(50%, -50%) rotate(-8deg)
-    @include tape
-
-.message
-  position: fixed
-  left: 50%
-  top: 50%
-  transform: translate(-50%, -50%)
-  max-width: calc(100vw - 2cm)
-  max-height: calc(100vh - 2cm)
-  overflow: visible
-  @include lined-paper-with-content
-
-  &::before
-    content: ""
-    position: absolute
-    left: 50%
-    top: 0
-    width: 2cm
-    height: 1cm
-    transform: translate(-50%, -50%) rotate(6deg)
-    @include tape
-
-  &::after
-    content: ""
-    position: absolute
-    left: 50%
-    bottom: 0
-    width: 2cm
-    height: 1cm
-    transform: translate(-50%, 50%) rotate(-5deg)
-    @include tape
+body
+  margin-top: 3.25cm
 
 .form
-  position: fixed
-  left: 50%
-  top: 50%
-  transform: translate(-50%, -50%)
-  max-width: calc(100vw - 2cm)
-  max-height: calc(100vh - 2cm)
-  overflow: visible
-  @include lined-paper-with-content
-
-  &::before
-    content: ""
-    position: absolute
-    left: 50%
-    top: 0
-    width: 2cm
-    height: 1cm
-    transform: translate(-50%, -50%) rotate(6deg)
-    @include tape
-
-  &::after
-    content: ""
-    position: absolute
-    left: 50%
-    bottom: 0
-    width: 2cm
-    height: 1cm
-    transform: translate(-50%, 50%) rotate(-5deg)
-    @include tape
-
-label
-  color: ink(0.66)
-  display: block
-  border-bottom: 0.05cm solid ink(0.53)
-  padding-top: 0.05cm
-  line-height: 0.65cm
-  position: relative
-  overflow: visible
-  &::before
-    content: ""
-    position: absolute
-    left: 0
-    right: 0
-    bottom: 0
-    height: 0.025cm
-    background: ink(0.73)
-    transform: rotate(0.8deg)
-  &::after
-    content: ""
-    position: absolute
-    left: 0
-    right: 0
-    bottom: 0
-    height: 0.025cm
-    background: ink(0.6)
-    transform: rotate(-0.6deg)
-
-.invalid.field label
-  color: rgba(120, 0, 0, 0.60)
-  border-bottom-color: rgba(120, 0, 0, 0.53)
-  &::before
-    background: rgba(120, 0, 0, 0.73)
-  &::after
-    background: rgba(120, 0, 68, 0.6)
+  margin: 1cm auto
+  padding-top: 0.375cm
+  background: linear-gradient(to bottom, rgb(255, 255, 238), rgb(238, 238, 255))
+  max-width: 12cm
+  @include card
 
 .field
-  margin-bottom: 0.75cm
+  padding: 0.375cm 0.75cm
+  @include ruled
 
-.field::last-child
-  margin-bottom: 0
+.field label
+  position: relative
+  color: ink(1)
 
-@mixin ink-border($opacity-a, $opacity-b, $opacity-c, $opacity-d)
-  border-color: ink($opacity-a) ink($opacity-b) ink($opacity-c) ink($opacity-d)
+  &::before
+    content: ""
+    position: absolute
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0.175cm
+    border-bottom: 0.05cm solid ink(0.7)
+    border-bottom-left-radius: 10cm 0.1cm
+    border-bottom-right-radius: 4cm 0.2cm
+
+.invalid.field label
+  color: invalid-ink(1)
+
+  &::before
+    border-bottom-color: invalid-ink(0.7)
+
+.field input
+  display: block
+  width: 100%
+  height: 0.75cm
 
 .submit-button
   text-align: center
   position: relative
   width: 100%
-  padding: 0.3cm 1.29cm 0.28cm 1.27cm
-  margin-top: -0.0625cm
+  padding: 0 0.75cm 0.375cm 0.75cm
+  height: 2.25cm
 
   font-weight: bold
   color: ink(0.66)
 
   cursor: pointer
 
-  border: solid
-  border-width: 0.05cm 0.06cm 0.07cm 0.08cm
-  border-radius: 0.2cm 0.19cm 0.22cm 0.1cm
-  @include ink-border(0.66, 0.53, 0.46, 0.53)
+  @include ruled
 
   &::before
     content: ""
     position: absolute
-    left: 0
-    top: 0
-    right: 0
-    bottom: 0
-    border: solid
-    transform: rotate(-0.6deg)
-    border-width: 0.085cm 0.065cm 0.075cm 0.055cm
-    border-radius: 0.29cm 0.1cm 0.24cm 0.17cm
-    @include ink-border(0.6, 0.73, 0.46, 0.6)
+    left: 0.75cm
+    right: 0.75cm
+    top: 0.125cm
+    bottom: 0.625cm
+    border: solid ink(0.66)
+    border-width: 0.06cm
+    border-radius: 10cm 0.3cm 7cm 12cm/0.5cm 8cm 0.2cm 0.35cm
 
   &::after
     content: ""
     position: absolute
-    left: 0
-    top: 0
-    right: 0
-    bottom: 0
-    border: solid black
-    transform: rotate(0.4deg)
-    border-width: 0.085cm 0.065cm 0.075cm 0.055cm
-    border-radius: 0.29cm 0.1cm 0.24cm 0.17cm
-    @include ink-border(0.73, 0.53, 0.66, 0.53)
+    left: 0.75cm
+    right: 0.75cm
+    top: 0.125cm
+    bottom: 0.625cm
+    border: solid ink(0.72)
+    border-width: 0.05cm
+    border-radius: 0.3cm 11.5cm 6cm 0.6cm/8.4cm 0.4cm 0.1cm 14.2cm
 
   &:not(:disabled):hover
     color: ink(0.8)
-    transform: scale(1.01)
-    @include ink-border(0.8, 0.66, 0.6, 0.66)
+
     &::before
-      @include ink-border(0.73, 0.86, 0.53, 0.73)
+      left: 0.75cm
+      right: 0.75cm
+      top: 0.125cm
+      bottom: 0.625cm
+      border-color: ink(0.77)
+
     &::after
-      @include ink-border(0.86, 0.66, 0.8, 0.66)
+      left: 0.75cm
+      right: 0.75cm
+      top: 0.125cm
+      bottom: 0.625cm
+      border-color: ink(0.83)
 
   &:not(:disabled):active
     color: ink(1)
-    transform: scale(0.99)
-    @include ink-border(0.93, 0.8, 0.73, 0.8)
+
     &::before
-      @include ink-border(0.86, 1, 0.66, 0.86)
+      left: 0.76cm
+      right: 0.76cm
+      top: 0.135cm
+      bottom: 0.635cm
+      border-color: ink(0.85)
+
     &::after
-      @include ink-border(1, 0.8, 0.93, 0.8)
+      left: 0.75cm
+      right: 0.75cm
+      top: 0.125cm
+      bottom: 0.625cm
+      border-color: ink(0.95)
 
   &:disabled
     cursor: not-allowed
     color: ink(0.3)
-    @include ink-border(0.1, 0.16, 0.08, 0.11)
+
     &::before
-      @include ink-border(0.12, 0.095, 0.06, 0.14)
+      border-color: ink(0.07)
+
     &::after
-      @include ink-border(0.11, 0.11, 0.12, 0.12)
+      border-color: ink(0.13)
