--- a/client/index.pug
+++ b/client/index.pug
@@ -2,6 +2,7 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title SUNRUSE Quiz
     link(href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap", rel="stylesheet")
   body
