Re-implement message styles.

--- a/client/index.sass
+++ b/client/index.sass
@@ -52,6 +52,16 @@ input
   box-shadow: 0 0.125cm 0.375cm ink(0.2)
   border-radius: 0.125cm
 
+.message
+  position: fixed
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
+  background: linear-gradient(to bottom, transparent 0cm, rgb(221, 221, 255) 0.02cm, transparent 0.04cm) 0 0.125cm repeat, linear-gradient(to bottom, rgb(255, 255, 238), rgb(238, 238, 255))
+  background-size: auto 0.75cm, auto auto
+  padding: 0.5cm 0.375cm 0.375cm 0.375cm
+  @include card
+
 body > h1
   position: fixed
   padding: 0 0.75cm
