--- a/client/index.sass
+++ b/client/index.sass
@@ -78,14 +78,14 @@ body > h1
 body
   margin-top: 3.25cm
 
-.form
+.form, .error
   margin: 1cm auto
   padding-top: 0.375cm
   background: linear-gradient(to bottom, rgb(255, 255, 238), rgb(238, 238, 255))
   max-width: 12cm
   @include card
 
-.field
+.field, .error p
   padding: 0.375cm 0.75cm
   @include ruled
 
@@ -135,7 +135,7 @@ body
     width: 100%
     height: 100%
 
-.submit-button
+.submit-button, .error button
   text-align: center
   position: relative
   width: 100%
